# Switch-image-generator

./: .gitignore  README.md  compare_switch_spacing.html  create_enhanced_switch.py  fix_legend_visibility.py  fix_svg_angle_brackets.py  fix_switch_spacing.py  generate_switch.py  gui.py  requirements_gui.txt  run_gui.py  test_equal_spacing.py  test_final_fix.py  test_fixed_spacing.py  test_gui_core.py  test_switch_sizes.py  test_switch_spacing.py  view_default_switches.html
JMF/: Cisco-Switch.py
backup/: configurable_switch_generator.py  create_single_row_switch.py  example_custom_single_row_switch.py  example_custom_switch_colors.py  example_modified_switch.py  example_modified_switch_with_legend_outside.py  example_switch_with_legend_outside.py  example_usage.py  single_row_switch_generator.py  switch_svg_generator.py
docs/: COMPREHENSIVE_DOCUMENTATION.md  CONFIGURABLE_SWITCH_README.md  GUI_DOCUMENTATION.md  README.md  SINGLE_ROW_SWITCH_README.md
examples/: create_enhanced_switch.py  create_one_row_switch_with_sfp.py  create_sfp_only_switch.py  create_single_row_switch.py  create_switch_with_gui.py  create_switches_no_gui.py  example_custom_model_name.py  example_custom_single_row_switch.py  example_custom_switch_colors.py  example_layout_modes.py  (+11 more)
pypi_package/: README.md  setup.cfg  setup.py
pypi_package/switch_svg_generator/: __init__.py  __main__.py  cli.py  core.py  core_base.py  core_dimensions.py  core_legend.py  core_ports.py  core_svg.py  single_row.py
pypi_package/switch_svg_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+41 files in other folders)
