[metadata]
name = switch_svg_generator
version = 0.1.0
author = Switch SVG Generator Team
author_email = example@example.com
description = A tool for generating SVG visualizations of network switches
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/switch_svg_generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Multimedia :: Graphics
    Topic :: System :: Networking

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pillow
